membrane/tests/ui/stream.stderr
error: expected `impl Stream<Item = Result>`
  --> tests/ui/stream.rs:34:30
   |
34 | pub fn one_failure() -> impl Stream<i32, String> {}
   |                              ^^^^^^

error: expected enum `Result`
  --> tests/ui/stream.rs:37:44
   |
37 | pub fn two_failure() -> impl Stream<Item = i32, String> {}
   |                                            ^^^
